Finished basic web design

--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-<h1>TEST</h1>
+<!DOCTYPE html>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>tylersong.me</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="main.js" type="text/javascript" defer></script>
+</head>
+<html>
+<!--Container for centering elements-->
+<div class="container">
+    <!--Header / title bar-->
+    <div class="header">
+        <h1>Tyler Song</h1>
+    </div>
+    <!-- Main content-->
+    <div class="content">
+        <h2>Hello! </h2>
+        <p>
+
+            I'm Tyler Song, a high school student in Maryland. I'm currently a freshman, living in
+            Minnesota for the vast majority of my life. I have a passion for programming — mainly using JavaScript, but
+            also in other languages too.
+
+            Below are some of the projects I've worked on / am working on and my GitHub profile.
+
+        </p>
+        <a class="btn accent-blue" href="https://github.com/Tee1er">GitHub -></a>
+        <a class="btn accent-pink" href="mailto:tyler@tylersong.me">Email -></a>
+        <div class="accent-box accent-pink">
+            <p>JavaScript — Go — Rust</p>
+            <p>Node.js — Webdev — UI/UX</p>
+        </div>
+    </div>
+    <div class="content">
+        <h2>Projects</h2>
+        <p>
+            I've worked on a few projects; click on one to explore more and find
+            all the relevant links.
+        </p>
+
+        <div class="accordion">
+            <!--Accordion style display of projects-->
+            <div class="accordion-item">
+                <span class="accordion-label">🟠 Boing
+                </span>
+                <div class="accordion-content">
+                    PLACEHOLDER
+                </div>
+            </div>
+            <div class="accordion-item">
+                <span class="accordion-label">🕹️ McWrapper
+                </span>
+                <div class="accordion-content">
+                    PLACEHOLDER
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+</html>
