--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>tylersong.me</title>
+    <title>Tyler Song</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="main.js" type="text/javascript" defer></script>
 </head>
