Fix mobile issue, add project details

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <p>
 
             I'm Tyler Song, a high school student in Maryland. I'm currently a freshman, living in
-            Minnesota for the vast majority of my life. I have a passion for programming — mainly using JavaScript, but
-            also in other languages too.
+            Minnesota for the vast majority of my life. I'm passionate about programming & engineering — mainly using
+            JavaScript, but also in other languages too.
 
             Below are some of the projects I've worked on / am working on and my GitHub profile.
 
@@ -45,14 +45,32 @@
                 <span class="accordion-label">🟠 Boing
                 </span>
                 <div class="accordion-content">
-                    PLACEHOLDER
+                    <p> Boing is a Discord-connected wrapper for the server for the tower-defense / strategy game
+                        Mindustry.
+                        It allows you to control it remotely through Discord using a Discord bot interface. Boing
+                        passes input to the server application (a .jar) and then forwards the output to Discord.</p>
+                    <p>
+                        Currently, Boing is at a relatively stable state where it's working well enough for most
+                        users as long as they're willing to tolerate a crash once in a while.</p>
+                    <a class="btn accent-blue" href="https://github.com/Tee1er/boing">GitHub -></a>
+                    <a class="btn accent-gray" href="https://mindustrygame.github.io/">Mindustry -></a>
                 </div>
             </div>
             <div class="accordion-item">
                 <span class="accordion-label">🕹️ McWrapper
                 </span>
                 <div class="accordion-content">
-                    PLACEHOLDER
+                    <p>
+                        Yet another wrapper. This one is for Minecraft (Bedrock edition). McWrapper is a wrapper for the
+                        Bedrock Dedicated Server, providing useful features like backups, autoupdates, and a neat CLI
+                        interfaceas well. McWrapper currently is rather unfinished and doesn't have a lot of features
+                        yet.
+                    </p>
+                    <p> Links to both McWrapper and the BDS are below.</p>
+
+                    <a class="btn accent-blue" href="https://github.com/Tee1er/mcwrapper">GitHub -></a>
+                    <a class="btn accent-gray" href="https://www.minecraft.net/en-us/download/server/bedrock">Server DL
+                        -></a>
                 </div>
             </div>
         </div>
