Open links in new tab

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <p>
                         Currently, Boing is at a relatively stable state where it's working well enough for most
                         users as long as they're willing to tolerate a crash once in a while.</p>
-                    <a class="btn accent-blue" href="https://github.com/Tee1er/boing">GitHub -></a>
-                    <a class="btn accent-gray" href="https://mindustrygame.github.io/">Mindustry -></a>
+                    <a class="btn accent-blue" href="https://github.com/Tee1er/boing" target="_blank">GitHub -></a>
+                    <a class="btn accent-gray" href="https://mindustrygame.github.io/" target="_blank">Mindustry -></a>
                 </div>
             </div>
             <div class="accordion-item">
@@ -68,8 +68,9 @@
                     </p>
                     <p> Links to both McWrapper and the BDS are below.</p>
 
-                    <a class="btn accent-blue" href="https://github.com/Tee1er/mcwrapper">GitHub -></a>
-                    <a class="btn accent-gray" href="https://www.minecraft.net/en-us/download/server/bedrock">Server DL
+                    <a class="btn accent-blue" href="https://github.com/Tee1er/mcwrapper" target="_blank">GitHub -></a>
+                    <a class="btn accent-gray" href="https://www.minecraft.net/en-us/download/server/bedrock"
+                        target="_blank">Server DL
                         -></a>
                 </div>
             </div>
