--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Tyler Song</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="main.js" type="text/javascript" defer></script>
+    <link rel="icon" type="image/x-icon" href="logo.ico">
 </head>
 <html>
 <!--Container for centering elements-->
