add extra project :|

--- a/index.html
+++ b/index.html
@@ -75,6 +75,28 @@
                         -></a>
                 </div>
             </div>
+            <div class="accordion-item">
+                <span class="accordion-label">🧬 Game of Life
+                </span>
+                <div class="accordion-content">
+                    <p>
+                        A very simple Game of Life implementation, a cellular automata simulation developed by John
+                        Conway
+                        in 1970s. Life is a pretty simple simulation where cells live and die based on the numbers
+                        of surrounding cells. This is a really simple terminal-based program written in Go using minimal
+                        external dependencies. It's more of a "learning" project than an actually useful GoL
+                        implementation.
+                    </p>
+                    <p> Download (altho why would you?), an actually decent version, and info on Life itself:</p>
+
+                    <a class="btn accent-blue" href="https://github.com/Tee1er/life" target="_blank">GitHub -></a>
+                    <a class="btn accent-pink" href="http://golly.sourceforge.net/" target="_blank">Golly
+                        -></a>
+                    <a class="btn accent-gray" href="https://pi.math.cornell.edu/~lipa/mec/lesson6.html"
+                        target="_blank">Info
+                        -></a>
+                </div>
+            </div>
         </div>
 
     </div>
