--- a/index.html
+++ b/index.html
@@ -27,17 +27,11 @@
     <!-- Main content-->
     <div class="content">
         <h2>Hello! </h2>
-        <p>
-
-            I'm Tyler Song, a high school student in Maryland. I lived in Minnesota for most of my life, but I recently
-            moved to Maryland!
-            Mostly interested in web dev & Node.js stuff but I've been trying to do some systems programming in Rust &
-            C.
-
-            Below are some of the projects I've worked on / am working on (wish I had more — procrastionation :| )and my
-            GitHub profile.
-
-        </p>
+        <ul>
+            <li>High schooler in Maryland</li>
+            <li>Lived in Minnesota for 13 years</li>
+            <li>Some projects linked below 👇(wish I had more but motivation ...)</li>
+        </ul>
         <a class="btn accent-blue" href="https://github.com/Tee1er">GitHub -></a>
         <a class="btn accent-pink" href="mailto:tyler@tylersong.me">Email -></a>
     </div>
